Adding Trivia night event

--- a/events.html
+++ b/events.html
@@ -107,7 +107,7 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                         <div class="month">
                           <ul>
-                            <li style="text-align:center">February<br><span style="font-size:18px">2017</span>
+                            <li style="text-align:center">March<br><span style="font-size:18px">2017</span>
                             </li>
                           </ul>
                         </div>
@@ -125,35 +125,39 @@
                         <ul class="days">
                             <li></li>
                             <li></li>
-                          <li></li>
-                          <li>1</li>
-                          <li>2</li>
-                          <li>3</li>
-                          <li>4</li>
-                          <li>5</li>
-                          <li>6</li>
-                          <li>7</li>
-                          <li>8</li>
-                          <li>9</li>
-                          <li>10</li>
-                          <li>11</li>
-                          <li>12</li>
-                          <li>13</li>
-                          <li>14</li>
-                          <li>15</li>
-                          <li>16</li>
-                            <li><span id="myBtn" style="cursor:pointer" class="event">17</span></li>
-                          <li>18</li>
-                          <li>19</li>
-                          <li>20</li>
-                          <li>21</li>
-                          <li>22</li>
-                          <li>23</li>
-                          <li>24</li>
-                          <li>25</li>
-                          <li>26</li>
-                          <li>27</li>
-                          <li>28</li>
+                            <li></li>
+                            <li>1</li>
+                            <li>2</li>
+                            <li><span id="myBtn" style="cursor:pointer" class="event">3</span></li>
+                            <li>4</li>
+                            <li>5</li>
+                            <li>6</li>
+                            <li>7</li>
+                            <li>8</li>
+                            <li>9</li>
+                            <li>10</li>
+                            <li>11</li>
+                            <li>12</li>
+                            <li>13</li>
+                            <li>14</li>
+                            <li>15</li>
+                            <li>16</li>
+                            <li>17</li>
+                            <li>18</li>
+                            <li>19</li>
+                            <li>20</li>
+                            <li>21</li>
+                            <li>22</li>
+                            <li>23</li>
+                            <li>24</li>
+                            <li>25</li>
+                            <li>26</li>
+                            <li>27</li>
+                            <li>28</li>
+                            <li>29</li>
+                            <li>30</li>
+                            <li>31</li>
+
                         </ul>
 <!--
 <li><span id="myBtn" style="cursor:pointer" class="clubweek">16</span></li>
@@ -182,8 +186,8 @@
                           <div class="modal-content">
                             <span class="close">x</span>
 <!--                              <img src="img/costumekaraoke.jpg" HEIGHT="200" WIDTH="800" >-->
-                            <h1>uOttawa Pajama Day!</h1>
-                              <p>Let’s bring back the good days with the ultimate university-wide PAJAMA DAY! You read that right, on Friday November 25th, let us all come to school in our coziest, comfiest jammies and celebrate our last week of classes! This event can only be successful with the participation of all uOttawa students, so like, share and invite your friends! If you are interested in taking action to help end world hunger, be sure to also visit our banana themed bake sale in the UCU Agora from 9:00AM to 4:00PM! Proceeds will go towards Action Against Hunger Canada's Maternal and Child Health Initiative (MATCH) in Guatemala and Kenya. </p>
+                            <h1>uOttawa Trivia Night!</h1>
+                              <p>ACF invites you to join us for Trivia Night! 10 rounds, 10 questions, 1 winning team! Join us at cafe alt for an evening of general knowledge trivia and prove that your team has what it takes to take home the winning prize! </p>
                           </div> 
                 
                 </div>
