--- a/eventsFR.html
+++ b/eventsFR.html
@@ -107,7 +107,7 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                         <div class="month">
                           <ul>
-                            <li style="text-align:center">Février<br><span style="font-size:18px">2017</span>
+                            <li style="text-align:center">Mars<br><span style="font-size:18px">2017</span>
                             </li>
                           </ul>
                         </div>
@@ -128,7 +128,7 @@
                             <li></li>
                           <li>1</li>
                           <li>2</li>
-                          <li>3</li>
+                            <li><span id="myBtn" style="cursor:pointer" class="event">3</span></li>
                           <li>4</li>
                           <li>5</li>
                           <li>6</li>
@@ -142,7 +142,7 @@
                           <li>14</li>
                           <li>15</li>
                           <li>16</li>
-                            <li><span id="myBtn" style="cursor:pointer" class="event">17</span></li>
+                          <li>17</li>
                           <li>18</li>
                           <li>19</li>
                           <li>20</li>
@@ -154,6 +154,10 @@
                           <li>26</li>
                           <li>27</li>
                           <li>28</li>
+                          <li>29</li>
+                          <li>30</li>
+                          <li>31</li>
+
                         </ul>
                 
                         <!-- The MEETING Modal -->
@@ -176,8 +180,8 @@
                           <div class="modal-content">
                             <span class="close">x</span>
 <!--                              <img src="img/Screen%20Shot%202016-06-02%20at%202.13.37%20PM.png">-->
-                            <h1>Journée Pyjama uOttawa</h1>
-                              <p>Ramenons les bons souvenirs avec l’ultime JOURNÉE PYJAMA partout sur le campus! Oui, vous avez bien lu, le vendredi 25 novembre, revenons à l'école dans nos pyjamas les plus doux et confortables et célébrons la dernière semaine de cours! Cet événement ne peut être réussi qu'avec la participation de tous les étudiants, donc cliquer j’aime, partagez et invitez vos amis! Si vous souhaitez aider à éliminer la faim dans le monde, nous vous invitons également à faire visite à notre vente de pâtisseries aux bananes dans le Centre de l’université Agora entre 9h00 et 16h00!</p>
+                            <h1>Soirée Trivia uOttawa</h1>
+                              <p>ACF vous invite à participer à une soirée Trivia! Il y aura 10 séries de 10 questions, pour finir avec une seule  équipe gagnante! Rejoignez-nous à café alt pour une soirée de connaissance et prouvez que votre équipe a ce qu’il faut pour remporter le trophée!</p>
 
                           </div>
 
