Money raised update

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                             
                             
                             <div id="sample_goal"></div>
-                            <p><small><small><i>Reset May 1st 2016. Last updated Oct 23rd 2016. Goal: 8000$. Raised: 1834.50$ *Excludes online campaign</i></small></small></p>
+                            <p><small><small><i>Reset May 1st 2016. Last updated Feb 10th 2017. Goal: 8000$. Raised: 1984.50$ *Excludes online campaign</i></small></small></p>
 
 
                             <div class = image >
@@ -195,7 +195,7 @@ Hunger claims one million young lives every year, but for the first time in hist
         $(document).ready(function(){
             $('#sample_goal').goalProgress({
                 goalAmount: 8000,
-                currentAmount: 1834.50,
+                currentAmount: 1984.50,
                 textBefore: '$',
 //                textAfter: ' raised'
             });
